@@ -265,7 +265,7 @@ use IO ();	# Load the XS module
 require Exporter;
 @ISA = qw(Exporter);
 
-$VERSION = "1.26";
+$VERSION = "1.27";
 $VERSION = eval $VERSION;
 
 @EXPORT_OK = qw(
@@ -579,7 +579,7 @@ sub format_write {
     @_ < 3 || croak 'usage: $io->write( [FORMAT_NAME] )';
     if (@_ == 2) {
 	my ($io, $fmt) = @_;
-	my $oldfmt = $io->format_name($fmt);
+	my $oldfmt = $io->format_name(qualify($fmt,caller));
 	CORE::write($io);
 	$io->format_name($oldfmt);
     } else {
