@@ -9,12 +9,13 @@ package IO::Socket::INET;
 use strict;
 our(@ISA, $VERSION);
 use IO::Socket;
+use Socket;
 use Carp;
 use Exporter;
 use Errno;
 
 @ISA = qw(IO::Socket);
-$VERSION = "1.29_02";
+$VERSION = "1.31";
 
 my $EINVAL = exists(&Errno::EINVAL) ? Errno::EINVAL() : 1;
 
