@@ -10,23 +10,21 @@ BEGIN {
 use Config;
 
 BEGIN {
-    if(-d "lib" && -f "TEST") {
-	my $reason;
+    my $reason;
 
-	if ($Config{'extensions'} !~ /\bSocket\b/) {
-	  $reason = 'Socket was not built';
-	}
-	elsif ($Config{'extensions'} !~ /\bIO\b/) {
-	  $reason = 'IO was not built';
-	}
-	elsif ($^O eq 'apollo') {
-	  $reason = "unknown *FIXME*";
-	}
-	undef $reason if $^O eq 'VMS' and $Config{d_socket};
-	if ($reason) {
-	    print "1..0 # Skip: $reason\n";
-	    exit 0;
-	}
+    if ($ENV{PERL_CORE} and $Config{'extensions'} !~ /\bSocket\b/) {
+      $reason = 'Socket was not built';
+    }
+    elsif ($ENV{PERL_CORE} and $Config{'extensions'} !~ /\bIO\b/) {
+      $reason = 'IO was not built';
+    }
+    elsif ($^O eq 'apollo') {
+      $reason = "unknown *FIXME*";
+    }
+    undef $reason if $^O eq 'VMS' and $Config{d_socket};
+    if ($reason) {
+	print "1..0 # Skip: $reason\n";
+	exit 0;
     }
 }
 
