@@ -10,30 +10,29 @@ BEGIN {
 use Config;
 
 BEGIN {
-    if(-d "lib" && -f "TEST") {
-	my $reason;
-	if (! $Config{'d_fork'}) {
-	    $reason = 'no fork';
-	}
-	elsif ($Config{'extensions'} !~ /\bSocket\b/) {
-	    $reason = 'Socket extension unavailable';
-	}
-	elsif ($Config{'extensions'} !~ /\bIO\b/) {
-	    $reason = 'IO extension unavailable';
-	}
-	elsif ($^O eq 'os2') {
-	    require IO::Socket;
+    my $reason;
+    if ($ENV{PERL_CORE} and $Config{'extensions'} !~ /\bSocket\b/) {
+	$reason = 'Socket extension unavailable';
+    }
+    elsif ($ENV{PERL_CORE} and $Config{'extensions'} !~ /\bIO\b/) {
+	$reason = 'IO extension unavailable';
+    }
+    elsif ($^O eq 'os2') {
+	require IO::Socket;
 
-	    eval {IO::Socket::pack_sockaddr_un('/foo/bar') || 1}
-	      or $@ !~ /not implemented/ or
-		$reason = 'compiled without TCP/IP stack v4';
-	} elsif ($^O =~ m/^(?:qnx|nto|vos)$/ ) {
-	    $reason = 'Not implemented';
-	}
-	if ($reason) {
-	    print "1..0 # Skip: $reason\n";
-	    exit 0;
-        }
+	eval {IO::Socket::pack_sockaddr_un('/foo/bar') || 1}
+	  or $@ !~ /not implemented/ or
+	    $reason = 'compiled without TCP/IP stack v4';
+    }
+    elsif ($^O =~ m/^(?:qnx|nto|vos)$/ ) {
+	$reason = 'Not implemented';
+    }
+    elsif (! $Config{'d_fork'}) {
+	$reason = 'no fork';
+    }
+    if ($reason) {
+	print "1..0 # Skip: $reason\n";
+	exit 0;
     }
 }
 
